<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- general project -->
    <string name="app_name">CS2340 Project</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_log_in">Log In</string>
    <!-- Intent values -->
    <string name="user_constant">com.CeramicKoala.cs2340.USER</string>
    <string name="username_constant">com.CeramicKoala.cs2340.USERNAME</string>
    <string name="password_constant">com.CeramicKoala.cs2340.PASSWORD</string>
    <string name="full_name_constant">com.CeramicKoala.cs2340.FULL_NAME</string>
    <!-- main activity -->
    <string name="username_hint">username</string>
    <string name="password_hint">password</string>
    <string name="log_in">Log In</string>
    <string name="signup">Sign Up</string>
    <string name="default_full_name">administrator</string>
    <string name="default_user">admin1</string>
    <string name="default_password">pass123</string>
    <!-- log in -->
    <string name="reset_db">Reset db</string>
    <string name="log_in_success">Welcome,</string>
    <string name="log_in_error_incorrect_password">Sorry, the password you entered was incorrect</string>
    <string name="log_in_error_no_account">Sorry, the information you entered does not match an account.</string>
    <string name="log_in_error_user_at_least_six">The username must be at least six letters long.</string>
    <string name="create_acc">Create Account</string>
    <string name="view_acc">View Account</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="account_list_report">Account Listing Report</string>
    <!-- register -->
    <string name="full_name_hint">FirstName LastName</string>
    <string name="register_success">Your new account has been created</string>
    <string name="register_error_username_already_exists">The username you have entered already exists</string>
    <string name="register_message">Please enter your information and then click submit.</string>
    <string name="title_activity_account_management">AccountManagementActivity</string>
    <string name="submit">Submit</string>
    <string name="log_in_error_pass_at_least_six">The password must be at least six letters long.</string>
    <string name="empty_field_error">The required fields cannot be empty.</string>
    <string name="title_activity_login_open_helper_test">LoginOpenHelperTest</string>
    <string name="title_activity_account_open_helper_test">AccountOpenHelperTest</string>
    <string name="title_activity_account_registration">AccountRegistrationActivity</string>
    <string name="log_in_error_field_empty">Both username and password must be filled in.</string>
    <string name="account_registration_field_empty">Please enter all values into the fields.</string>
    <string name="title_activity_account_home">AccountHomeActivity</string>
    <string name="title_activity_report">Report Generation</string>
    <string name="title_activity_withdrawal_report">Withdrawal Report</string>
    <string name="title_activity_transaction_history">Transaction History</string>
    <string name="title_activity_deposit_report">Deposit Report</string>
    <string name ="title_activity_account_listing">Account Listing Report</string>
    <string name="title_activity_cash_flow">Cash Flow Report</string>
    <string name="chosen_account_constant">com.CeramicKoala.cs2340.CHOSEN_ACCOUNT</string>
    <string name="balance_message">Current Balance is: </string>
    <string name="no_account">No accounts have been created yet!</string>
    <!-- accounthome -->
    <string name="make_a_transaction">Perform Transaction</string>
    <string name="report_generate">Generate a Report</string>
    <string name="balance">Current Balance: </string>
    <string name="enter_amount">Enter Amount of Money</string>
    <string name="choose_day">Select Date</string>
    <string name="cancel">Cancel</string>
    <string name="execute_a_transaction">Confirm Transaction</string>
    <string name="view_transaction_history">View Transaction History</string>
    <string name="deposit">Deposit</string>
    <string name="withdrawal">Withdrawal</string>
    <!-- reports -->
    <string name="start_date">Select Beginning Date</string>
    <string name="end_date">Select End Date</string>
    <string name = "date_select">Date Selection</string>
    <string name="generate_report">Display Report</string>
    <string name="withdrawal_report">Spending Category Report for </string>
    <string name ="withdrawal_report_button">Spending Category Report</string>
    <string name ="deposit_report_button">Income Source Report</string>
    <string name ="deposit_report">Income Source Report for</string>
    <string name="cash_flow_report">Cash Flow Report</string>
    <string name="account_listing">Account Listing Report</string>
    <string name="transaction_history">Transaction History for</string>
    <string name="cashflow_history">Cash Flow Report for</string>
    <string name="rollback">Rollback a Transaction</string>
    <string name="undo_rollback">Undo Rollback</string>
    <string name="date_start_to_end"></string>
    <string name="date">Date</string>
    <string name="type">Type</string>
    <string name="category">Category</string>
    <string name="amount">Amount</string>
    <string name="as_of">As of</string>
    <string name="acc_list_default">Account</string>
    <string name="acc_list_default_bal">Current Balance</string>
    <string name="go_home">Return to Menu</string>
    <string name="go_acc_menu">Return to Account Menu</string>
    <string name="report_problem">This should be overwritten</string>
    <!-- other stuff by Casey -->
    <string name="auto">auto</string>
    <string name="Group_Name">Ceramic Koala</string>
    <string name="title_activity_easter_egg">EasterEggActivity</string>

</resources>
