<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/plaingreenwallpaper"
    tools:context=".TransactionHistoryActivity" >
    
    <TextView
        android:id="@+id/transaction_history_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:gravity="center"
        android:text="@string/transaction_history"
        android:textColor="#fff" />
    
    <TextView
        android:id="@+id/transhist_date_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below ="@+id/transaction_history_header"
        android:gravity="center"
        android:text="@string/date_start_to_end"
        android:textColor="#fff" />

    

    <TextView
        android:id="@+id/trans_amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/catgeory_type"
        android:layout_alignBottom="@+id/catgeory_type"
        android:layout_alignParentRight="true"
        android:layout_marginRight="21dp"
        android:gravity="center"
        android:text="@string/amount"
        android:textColor="#fff" />

    <TextView
        android:id="@+id/catgeory_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/trans_date"
        android:layout_alignBottom="@+id/trans_date"
        android:layout_marginRight="29dp"
        android:layout_toLeftOf="@+id/trans_amount"
        android:gravity="center"
        android:text="@string/category" 
        android:textColor="#fff"/>

    <TextView
        android:id="@+id/report_base_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/catgeory_type"
        android:layout_alignBottom="@+id/catgeory_type"
        android:layout_marginRight="15dp"
        android:layout_toLeftOf="@+id/catgeory_type"
        android:gravity="center"
        android:text="@string/type" 
        android:textColor="#fff"/>

    <TextView
        android:id="@+id/trans_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/transhist_date_info"
        android:layout_below="@+id/transhist_date_info"
        android:gravity="center"
        android:text="@string/date"
        android:textColor="#fff" />

</RelativeLayout>

