<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/plaingreenwallpaper"
    tools:context=".RegisterActivity" >

    <TextView
        android:id="@+id/register_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"
        android:text="@string/register_message"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="12sp" 
        android:textColor="#fff"/>

    <EditText
        android:id="@+id/register_full_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/register_message"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:ems="10"
        android:hint="@string/full_name_hint"
        android:inputType="textPersonName"
        android:gravity="center" 
        android:background="@drawable/texteditbox">

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/register_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/register_full_name"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="38dp"
        android:ems="10" 
        android:inputType="text"
        android:hint="@string/username_hint"
        android:gravity="center" 
        android:background="@drawable/texteditbox"/>
        
    <EditText
        android:id="@+id/register_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/register_username"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="48dp"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/password_hint"
        android:gravity="center" 
        android:background="@drawable/texteditbox"/>

    <Button
        android:id="@+id/register_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/register_password"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="48dp"
        android:onClick="submit"
        android:text="@string/submit" />

</RelativeLayout>
