<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".AccountListingActivity" >
    
    <TextView
        android:id="@+id/account_listing_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:gravity="center"
        android:text="@string/account_listing" />

    <TextView
        android:id="@+id/listing_date_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/account_listing_header"
        android:layout_below="@+id/account_listing_header"
        android:layout_marginLeft="16dp"
        android:gravity="center"
        android:text="@string/as_of" />

    <TextView
        android:id="@+id/account_listing_bal"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/account_listing_name"
        android:layout_alignBottom="@+id/account_listing_name"
        android:layout_alignParentRight="true"
        android:layout_marginRight="16dp"
        android:layout_toRightOf="@+id/account_listing_name"
        android:gravity="center"
        android:text="@string/acc_list_default_bal" />

    <TextView
        android:id="@+id/account_listing_name"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/listing_date_info"
        android:layout_marginTop="24dp"
        android:gravity="center"
        android:text="@string/acc_list_default" />
    
 </RelativeLayout>