<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/plaingreenwallpaper"
    tools:context=".ReportActivity" >
    
    <TextView
        android:id="@+id/login_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:gravity="center"
        android:text="@string/log_in_success"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="28sp" 
        android:textColor="#fff"
        android:textStyle= "bold"/>

    <Button
        android:id="@+id/choose_start_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_message"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="58dp"
        android:onClick="showStartDatePickerDialog"
        android:text="@string/start_date" />

    <Button
        android:id="@+id/generate_a_report"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/set_end"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="39dp"
        android:onClick="displayReport"
        android:text="@string/generate_report" />

    <Button
        android:id="@+id/set_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/choose_start_date"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="37dp"
        android:onClick="showEndDatePickerDialog"
        android:text="@string/end_date" />

</RelativeLayout>
