<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/plaingreenwallpaper"
    tools:context=".AccountHomeActivity" >
    
    <TextView
        android:id="@+id/login_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:gravity="center"
        android:text="@string/log_in_success"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="28sp" 
        android:textColor="#fff"
        android:textStyle= "bold"/>

    <TextView
        android:id="@+id/current_balance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_message"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:text="@string/balance" 
        android:textColor="#fff"/>

    <Button
        android:id="@+id/make_transaction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/current_balance"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="55dp"
        android:onClick="startTransaction"
        android:text="@string/make_a_transaction" />

    <Button
        android:id="@+id/transaction_history"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/make_transaction"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="14dp"
        android:onClick="getTransactionHistory"
        android:text="@string/view_transaction_history" />

</RelativeLayout>