<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".AccountListingActivity" >
    
    <TextView
        android:id="@+id/cash_flow_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:gravity="center"
        android:text="@string/cash_flow_report" />

    <TextView
        android:id="@+id/cash_flow_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/cash_flow_header"
        android:layout_below="@+id/cash_flow_header"
        android:layout_marginLeft="16dp"
        android:gravity="center"
        android:text="@string/as_of" />

    <TextView
        android:id="@+id/cash_flow_titles"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/cash_flow_balances"
        android:layout_alignBottom="@+id/cash_flow_balances"
        android:layout_alignLeft="@+id/cash_flow_date"
        android:gravity="center"
        android:text="@string/report_problem" />

    <TextView
        android:id="@+id/cash_flow_balances"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/cash_flow_date"
        android:layout_marginRight="17dp"
        android:layout_marginTop="22dp"
        android:gravity="center"
        android:text="@string/report_problem" />
    
    <Button
        android:id="@+id/acc_menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="40dp"
        android:onClick="goUserHome"
        android:text="@string/go_home" />
    
 </RelativeLayout>
