<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/plaingreenwallpaper"
    tools:context=".DepositReportActivity" >
    
    <TextView
        android:id="@+id/deposit_report_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:gravity="center"
        android:text="@string/deposit_report" 
        android:textColor="#fff"/>
    
    <TextView
        android:id="@+id/report_date_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below ="@+id/deposit_report_header"
        android:gravity="center"
        android:text="@string/date_start_to_end" 
        android:textColor="#fff"/>
    <Button
        android:id="@+id/acc_menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/report_date_info"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="148dp"
        android:onClick="goAccountHome"
        android:text="@string/go_acc_menu" />

    <TextView
        android:id="@+id/income_report_amount"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/report_date_info"
        android:layout_marginTop="20dp"
        android:layout_toRightOf="@+id/deposit_report_header"
        android:gravity="center"
        android:text="@string/amount" 
        android:textColor="#fff"/>

    <TextView
        android:id="@+id/spending_report"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/income_report_amount"
        android:layout_alignBottom="@+id/income_report_amount"
        android:layout_alignLeft="@+id/report_date_info"
        android:gravity="center"
        android:text="@string/date" 
        android:textColor="#fff"/>

</RelativeLayout>
